api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api-tutorial
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-tutorial
  template:
    metadata:
      labels:
        app: api-tutorial
    spec:
      containers:
        - name: django
          image: jsi/api-tutorial:0.1.1
          ports:
            - containerPort: 8000
